--- a/config.toml
+++ b/config.toml
@@ -33,3 +33,7 @@ paginate = 5
         identifier = "youtube"
         name = "YouTube"
         url = "https://www.youtube.com/@jmac217x/"
+      [[languages.en.menu.main]]
+        identifier = "mastodon"
+        name = "Mastodon"
+        url = "https://fosstodon.org/@Jordanielder"
