--- a/config.toml
+++ b/config.toml
@@ -19,6 +19,7 @@ paginate = 5
     menuMore = "Show more"
     readMore = "Read more"
     readOtherPosts = "Read other posts"
+    showMenuItems = "5"
 
     [languages.en.params.logo]
       logoText = "Jor-Dani-Elder"
@@ -35,5 +36,5 @@ paginate = 5
         url = "https://www.youtube.com/@jmac217x/"
       [[languages.en.menu.main]]
         identifier = "mastodon"
-        name = "z) Connect on Mastodon"
+        name = "Mastodon"
         url = "https://fosstodon.org/@Jordanielder"
