--- a/config.toml
+++ b/config.toml
@@ -42,3 +42,7 @@ paginate = 5
         identifier = "github"
         name = "GitHub"
         url = "https://github.com/Jmac217"
+      [[languages.en.menu.main]]
+        identifier = "band"
+        name = "Band"
+        url = "https://onallsides.rocks"
