--- a/config.toml
+++ b/config.toml
@@ -19,7 +19,7 @@ paginate = 5
     menuMore = "Show more"
     readMore = "Read more"
     readOtherPosts = "Read other posts"
-    showMenuItems = "5"
+    showMenuItems = "6"
 
     [languages.en.params.logo]
       logoText = "Jor-Dani-Elder"
@@ -46,3 +46,7 @@ paginate = 5
         identifier = "band"
         name = "Band"
         url = "https://onallsides.rocks"
+      [[languages.en.menu.main]]
+        identifier = "contact"
+        name = "Contact"
+        url = "/posts/Contact"
