--- a/config.toml
+++ b/config.toml
@@ -19,7 +19,7 @@ paginate = 5
     menuMore = "Show more"
     readMore = "Read more"
     readOtherPosts = "Read other posts"
-    showMenuItems = "6"
+    showMenuItems = "7"
 
     [languages.en.params.logo]
       logoText = "Jor-Dani-Elder"
@@ -50,3 +50,7 @@ paginate = 5
         identifier = "contact"
         name = "Contact"
         url = "/posts/Contact"
+      [[languages.en.menu.main]]
+        identifier = "linkedin"
+        name = "LinkedIn"
+        url = "https://www.linkedin.com/in/jordanelder10/"
