--- a/config.toml
+++ b/config.toml
@@ -41,7 +41,7 @@ paginate = 5
       [[languages.en.menu.main]]
         identifier = "github"
         name = "GitHub"
-        url = "https://github.com/Jmac217"
+        url = "https://github.com/Jmac217/hugotest"
       [[languages.en.menu.main]]
         identifier = "band"
         name = "Band"
