--- a/config.toml
+++ b/config.toml
@@ -19,7 +19,7 @@ paginate = 5
     menuMore = "Show more"
     readMore = "Read more"
     readOtherPosts = "Read other posts"
-    showMenuItems = "7"
+    showMenuItems = "8"
 
     [languages.en.params.logo]
       logoText = "Jor-Dani-Elder"
@@ -54,3 +54,7 @@ paginate = 5
         identifier = "linkedin"
         name = "LinkedIn"
         url = "https://www.linkedin.com/in/jordanelder10/"
+      [[languages.en.menu.main]]
+        identifier = "design"
+        name = "Design"
+        url = "/posts/contact-jordan-elder-for-design-services"
